refactor: get(0) 호출을 getFirst() 호출로 대체